force-app/main/default/objects/EMI_Schedule__c/EMI_Schedule__c.object-meta.xml
<CustomObject>
    <label>EMI Schedule</label>
    <nameField>
        <label>EMI Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMI Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>