force-app/main/default/objects/EMI_Schedule__c/fields/EMI_Month__c.field-meta.xml
<CustomField>
    <fullName>EMI_Month__c</fullName>
    <label>EMI Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>