force-app/main/default/objects/EMI_Schedule__c/fields/EMI_Number__c.field-meta.xml
<CustomField>
    <fullName>EMI_Number__c</fullName>
    <label>EMI Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>