force-app/main/default/objects/EMI_Schedule__c/fields/EMI_Paid__c.field-meta.xml
<CustomField>
    <fullName>EMI_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMI Paid</label>
    <type>Checkbox</type>
</CustomField>