force-app/main/default/objects/EMI_Schedule__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up relationship between EMI Schedule and Loan Application</description>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>EMI Schedules</relationshipLabel>
    <relationshipName>EMI_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>